<resources>
    <string name="app_name" translatable="false">mobileKKM</string>
    <string name="title_home">Home</string>

    <string name="login_title">Krakow Municipal Card</string>
    <string name="login_subtitle">Log in to mobileKKM</string>
    <string name="login_email_hint">Email address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_create_account">Create account</string>
    <string name="login_submit">Log in</string>
    <string name="login_loading">Logging in…</string>

    <string name="registration_title">Register a new account</string>
    <string name="registration_complete">Please check your mail inbox to complete account registration</string>

    <string name="nav_tickets">Tickets</string>
    <string name="nav_account">Account</string>
    <string name="nav_backups">Backups</string>
    <string name="nav_settings">Settings</string>

    <string name="error_email_required">Enter a valid email address</string>
    <string name="error_password_required">Enter a valid password</string>
    <string name="error_invalid_credentials">Invalid login details</string>
    <string name="error_no_network">No Internet connection</string>
    <string name="error_unknown">Unknown error</string>

    <string name="intent_chooser_file">Select file</string>
    <string name="snackbar_retry">Try again</string>
</resources>
